k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlopsaf
  labels:
    app: mlopsaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlopsaf
  template:
    metadata:
      labels:
        app: mlopsaf
    spec:
      volumes:
        - name: sources-root
          emptyDir: {}
        - name: nginx-conf
          emptyDir: {}
      containers:
        - name: server
          image: nginx:1.19.7
          volumeMounts:
            - name: sources-root
              mountPath: /var/www/mlops.af/public
            - name: nginx-conf
              mountPath: /etc/nginx
