k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mlopsaf-service
spec:
  selector:
    app: mlopsaf
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
