k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mlopsaf-ingress
spec:
  rules:
  - host: mlops.af
    http:
      paths:
      - backend:
          serviceName: mlopsaf-service
          servicePort: 80
        path: /
  # tls:
  # - hosts:
  #   - mlops.af
  #   secretName: tls-secret
